<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">

    <!-- Top App Bar -->
    <LinearLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#000000"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_next_tiktool"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <ImageView
            android:id="@+id/btnMinus"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/circle_border"
            android:padding="8dp"
            android:src="@drawable/ic_minus" />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="15"
            android:textColor="#000000"
            android:textSize="35dp" />

        <ImageView
            android:id="@+id/btnPlus"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/circle_border"
            android:padding="8dp"
            android:src="@drawable/ic_plus" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:max="59"
        android:progress="14"
        android:progressTint="#E8425F"
        android:thumbTint="#E8425F"
        app:layout_constraintTop_toBottomOf="@id/llCounter" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/automatically_swipe_the_screen_every_15_seconds"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBar" />

    <LinearLayout
        android:id="@+id/llSwipeDirection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_direction"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cbDoubleClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enable_double_click"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSwipeDirection" />

    <TextView
        android:id="@+id/tvPermissionsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/to_start_please_allow_2_permissions_below"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbDoubleClick" />

    <TextView
        android:id="@+id/tvPerm1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/_1_appear_on_top"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPermissionsLabel" />

    <ImageView
        android:id="@+id/ivSettings1"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/ic_gear"
        app:layout_constraintBottom_toBottomOf="@+id/tvPerm1"
        app:layout_constraintStart_toEndOf="@+id/tvPerm1"
        app:layout_constraintTop_toTopOf="@+id/tvPerm1" />

    <TextView
        android:id="@+id/tvPerm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/_2_accessibility_service"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPerm1" />

    <ImageView
        android:id="@+id/ivSettings2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/ic_gear"
        app:layout_constraintBottom_toBottomOf="@+id/tvPerm2"
        app:layout_constraintStart_toEndOf="@+id/tvPerm2"
        app:layout_constraintTop_toTopOf="@+id/tvPerm2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:text="@string/let_start"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPerm2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRate"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:text="@string/rate_me"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStart" />

</androidx.constraintlayout.widget.ConstraintLayout>
